crates/flight-hotas-virpil/tests/snapshots/snapshot_tests__ace_pedals_center.snap
---
source: crates/flight-hotas-virpil/tests/snapshot_tests.rs
expression: state
---
VpcAcePedalsInputState {
    axes: VpcAcePedalsAxes {
        rudder: 0.5,
        left_toe_brake: 0.0,
        right_toe_brake: 0.0,
    },
    buttons: VpcAcePedalsButtons {
        raw: [
            0,
            0,
        ],
    },
}
