crates/flight-hotas-virpil/tests/snapshots/snapshot_tests__ace_torq_full.snap
---
source: crates/flight-hotas-virpil/tests/snapshot_tests.rs
expression: state
---
VpcAceTorqInputState {
    axis: VpcAceTorqAxis {
        throttle: 1.0,
    },
    buttons: VpcAceTorqButtons {
        raw: [
            0,
            0,
        ],
    },
}
