crates/flight-hotas-virpil/tests/snapshots/snapshot_tests__ace_torq_idle.snap
---
source: crates/flight-hotas-virpil/tests/snapshot_tests.rs
expression: state
---
VpcAceTorqInputState {
    axis: VpcAceTorqAxis {
        throttle: 0.0,
    },
    buttons: VpcAceTorqButtons {
        raw: [
            0,
            0,
        ],
    },
}
