crates/flight-hotas-virpil/tests/snapshots/snapshot_tests__panel1_idle.snap
---
source: crates/flight-hotas-virpil/tests/snapshot_tests.rs
expression: state
---
VpcPanel1InputState {
    buttons: VpcPanel1Buttons {
        raw: [
            0,
            0,
            0,
            0,
            0,
            0,
        ],
    },
}
